test/sema/typeck/array/set-wrong-index.out
error: Argument expects value of type `Int64` but got `String`.
--> set-wrong-index.dora:1:26
 | fn f(t: Array[Int32]){ t("bla") = 9i32; }
                            ~~~~~
 | 
1 error found.
