test/sema/typeck/array/set-wrong-index.dora
fn f(t: Array[Int32]){ t("bla") = 9i32; }
